# TrackXY

./: CMakeLists.txt  GEMINI.md  OpenCVTest.vcxproj  README.md  TASKS.md  TrackX.cpp  config.yaml  lkdemo.cpp  sample.csv  secrets.enc.env  stdafx.h  wiggum.sh
.gemini/: settings.json
.gemini/hooks/: after_agent.sh
src/: CLIParser.hpp  Calibrator.hpp  DataLogger.cpp  DataLogger.hpp  DualAxisAnalyzer.hpp  InputHandler.cpp  InputHandler.hpp  OscillationAnalyzer.hpp  TrackApp.cpp  TrackApp.hpp  Tracker.cpp  Tracker.hpp  Visualizer.cpp  Visualizer.hpp
tests/: test_analyzer.cpp  test_calibrator.cpp  test_cli.cpp  test_logger.cpp  test_main.cpp  test_tracker.cpp  test_video_input.cpp  test_visualizer.cpp
